--- a/3.0/action.yml
+++ b/3.0/action.yml
@@ -34,15 +34,6 @@ runs:
   using: composite
   steps:
 
-    - name: Test Compress backup files.
-      if: ${{ inputs.deploy-host-backup-path != '' }}
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        script: tar --remove-files -zcf ${{ inputs.deploy-host-backup-path }}/${{ github.sha }}.tar.gz -C ${{ inputs.deploy-host-backup-path }} ${{ github.sha }}
-        host: ${{ inputs.deploy-host }}
-        username: ${{ inputs.deploy-host-user }}
-        key: ${{ inputs.deploy-host-user-key }}
-        port: ${{ inputs.deploy-port }}
     - uses: actions/setup-node@v3
       with:
         node-version: 16.13.2
@@ -106,7 +97,20 @@ runs:
       run: rm ~/.npmrc
       shell: bash
 
-    - name: The rsync deployment to www-data user.
+    - name: The rsync deployment to www-data user (without backup).
+      if: ${{ inputs.deploy-host-backup-path == '' }}
+      uses: burnett01/rsync-deployments@4.1
+      with:
+        switches: -avzrog --delete --chown=${{ inputs.deploy-host-web-server-user }}:${{ inputs.deploy-host-web-server-user }} --exclude config --exclude config-example --exclude wp-content/uploads --exclude wp-content/plugins/gravityforms --exclude wp-content/plugins/wp-schema-pro --exclude track-assets --exclude wp-content/plugins/volontar-wordpress --exclude wp-content/languages --exclude .htaccess --exclude wp-content/plugins/local_* --exclude wp-content/fonts 
+        path: .
+        remote_path: ${{ inputs.deploy-host-path }}
+        remote_host: ${{ inputs.deploy-host }}
+        remote_user: ${{ inputs.deploy-host-user }}
+        remote_key: ${{ inputs.deploy-host-user-key }}
+        remote_port: ${{ inputs.deploy-port }}
+
+    - name: The rsync deployment to www-data user (with backup).
+      if: ${{ inputs.deploy-host-backup-path != '' }}
       uses: burnett01/rsync-deployments@4.1
       with:
         switches: -avzrog --delete --backup --backup-dir=${{ inputs.deploy-host-backup-path }}/$GITHUB_SHA --chown=${{ inputs.deploy-host-web-server-user }}:${{ inputs.deploy-host-web-server-user }} --exclude config --exclude config-example --exclude wp-content/uploads --exclude wp-content/plugins/gravityforms --exclude wp-content/plugins/wp-schema-pro --exclude track-assets --exclude wp-content/plugins/volontar-wordpress --exclude wp-content/languages --exclude .htaccess --exclude wp-content/plugins/local_* --exclude wp-content/fonts 
@@ -118,6 +122,7 @@ runs:
         remote_port: ${{ inputs.deploy-port }}
 
     - name: Compress backup files.
+      if: ${{ inputs.deploy-host-backup-path != '' }}
       uses: appleboy/ssh-action@v0.1.4
       with:
         script: tar --remove-files -zcf ${{ inputs.deploy-host-backup-path }}/${{ github.sha }}.tar.gz -C ${{ inputs.deploy-host-backup-path }} ${{ github.sha }}
@@ -127,6 +132,7 @@ runs:
         port: ${{ inputs.deploy-port }}
 
     - name: Delete backups older than 7 days.
+      if: ${{ inputs.deploy-host-backup-path != '' }}
       uses: appleboy/ssh-action@v0.1.4
       with:
         script: find ${{ inputs.deploy-host-backup-path }} -type f -mtime +7 -name '*.tar.gz' -delete
